<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.NoteActivity"
    tools:showIn="@layout/activity_note">

    <Spinner
        android:id="@+id/courses_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:nextFocusRight="@+id/txt_note_title"/>

    <EditText
        android:id="@+id/txt_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_title_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/courses_spinner"
        app:layout_constraintStart_toStartOf="@+id/courses_spinner"
        app:layout_constraintTop_toBottomOf="@+id/courses_spinner"
        android:nextFocusRight="@+id/txt_note_text"/>

    <EditText
        android:id="@+id/txt_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_text_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/txt_note_title"
        app:layout_constraintStart_toStartOf="@+id/txt_note_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_note_title"
        android:nextFocusRight="@+id/moduleStatusView" />

    <com.codejar.notekeeper.myCustom.ModuleStatusView
        android:id="@+id/moduleStatusView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="6dp"
        app:fillColor="#689F38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_note_text"
        app:outlineColor="@color/colorAccent"
        app:outlineWidth="7dp"
        app:shape="Square" />

    <ProgressBar
        android:id="@+id/progress_update"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="3"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moduleStatusView" />
</androidx.constraintlayout.widget.ConstraintLayout>