<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codejar.notekeeper.activities.NoteActivity">
    <item
        android:id="@+id/action_previous"
        android:icon="@android:drawable/ic_media_previous"
        android:orderInCategory="100"
        android:title="@string/action_previous_text"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="101"
        android:title="@string/menu_next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="102"
        android:title="@string/action_cancel_title"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="103"
        android:title="@string/action_send_mail_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_review_note"
        android:orderInCategory="104"
        android:title="@string/action_review_note"
        app:showAsAction="never" />
</menu>
